--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,16 @@ name = "vgdl-jax"
 version = "0.1.0"
 requires-python = ">=3.9"
 dependencies = [
-    "jax[cpu]",
-    "flax",
-    "chex",
+    "jax[cpu]>=0.4.30",
+    "flax>=0.8",
+    "chex>=0.1.86",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest"]
+render = ["pygame", "numpy"]
+benchmark = ["matplotlib"]
+all = ["vgdl-jax[dev,render,benchmark]"]
 
 [tool.pytest.ini_options]
 pythonpath = ["tests"]
